fixed side scrolling on mobile version

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -550,6 +550,8 @@
 
 @media (max-width: 768px) {
     .container {
+        max-width: 100vw;
+        overflow-x: hidden;
         // padding: 1rem;
         main {
             flex-direction: column;
